<resources>
    <string name="app_name">ProjectPortal</string>

    <string-array name="Projects_list">
        <item>Weather Forecast</item>
        <item>Connect Me</item>
        <item>What's eat</item>
        <item>Project Portal</item>
    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_project_main">ProjectMainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="author">Author</string>
    <string name="proj_favorite">Favorite</string>
    <string name="proj_keyword">Project Keyword</string>
    <string name="proj_link">Project Link</string>
    <string name="proj_author">Project Author</string>
    <string name="favorite">Favourite Project</string>
    <string name="submit">SUBMIT</string>
    <string name="link">Link</string>
    <string name="Additional">additional</string>
    <string name="keyword">Keyword</string>
    <string name="favorites">Favorites</string>
</resources>
