<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectEditActivity">

    <TextView
        android:id="@+id/projTitleTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Title" />

    <EditText
        android:id="@+id/projTitleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:cursorVisible="true"
        android:ems="10"
        android:hint=" " />

    <TextView
        android:id="@+id/projDetailTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Detail" />

    <EditText
        android:id="@+id/projDetailEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint=" " />


    <TextView
        android:id="@+id/authorTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/author" />

    <EditText
        android:id="@+id/authorEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint=" "

        />

    <CheckBox
        android:id="@+id/projFavoriteCheckBoxId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/proj_favorite" />

    <TextView
        android:id="@+id/projLinkTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/link" />

    <EditText
        android:id="@+id/projLinkEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:cursorVisible="true"
        android:ems="10"
        android:hint=" " />

    <TextView
        android:id="@+id/keywordTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/keyword" />

    <EditText
        android:id="@+id/keywordEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="" />


    <TextView
        android:id="@+id/additionalTextViewId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Additional" />

    <EditText
        android:id="@+id/additionalEditTextId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/Additional"

        />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/proDetailfragContainer"
        app:layout_constraintVertical_bias="1.0" />











</LinearLayout>